Sun Feb 25 00:12:08 2001  George Lebl <jirka@5z.com>

	* menu.c: correctly set the custom_icon_file member, to fix #51348

Sat Feb 24 23:49:15 2001  George Lebl <jirka@5z.com>

	* applet.c, foobar-widget.c, gnome-run.c, menu.c, swallow.c,
	  launcher.c: use g_get_home_dir () as the current directory for the
	  gnome_execute_* call, and push pop the home directory for
	  dentry launch.

	* menu.c: validate only the base of the filename so that adding new
	  items to menus actually works

Sat Feb 24 20:54:31 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c,menu-util.[ch]: check for nautilus desktop each time
	  we show the menu, this prevents a race when nautilus started later
	  then the panel.

	* applet-widget.c: minor leak fix.

Sat Feb 24 19:26:42 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, floating-widget.c, panel-util.[ch],
	  sliding-widget.c:  use hidebutton requisition rather then
	  allocation, as that's not really available yet sometimes.

	* floating-widget.c: Fixed #7552, autohiding floating panel
	  without hidebuttons needs to use the autohide size.  Limit hidden
	  size to 3 pixels, as 1 would make it impossible to manipulate.

Thu Feb 22 18:02:51 2001  George Lebl <jirka@5z.com>

	* xstuff.[ch], foobar-widget.c: detect presence of nautilus desktop
	  and don't show the gmc menus if this is the case.

Tue Feb 20 02:42:31 2001  George Lebl <jirka@5z.com>

	* drawer.c: make sure panels are synced when new one is created

	* panel.c, basep-widget.c: don't sync panels on every statechange
	  sync only when explicit state is set.

	* basep-widget.c: when autohide mode is on, the default layer is
	  always DOCK not the global default.  This is because it doesn't
	  really make sense to have autohide panels that go below windows

Sun Feb 18 01:53:46 2001  George Lebl <jirka@5z.com>

	* menu.c: the main menu has a title of "Main Menu" not "Panel"

Sun Feb 18 01:06:15 2001  George Lebl <jirka@5z.com>
